updated github for bonsai

--- a/tutorial_TeX/RB_MCMC_Tutorial/RB_MCMC_Tutorial_content.tex
+++ b/tutorial_TeX/RB_MCMC_Tutorial/RB_MCMC_Tutorial_content.tex
@@ -450,7 +450,7 @@ Apply multiple-run diagnostics:
 \definecolor{shadecolor}{RGB}{183,207,237}
 Diagnosing MCMC performance manually can be extremely cumbersome, especially for more complex models.
 The R package bonsai performs a standard set of diagnostics on MCMC output and generates a report that highlights potentially pathological MCMC behaviors.
-To use bonsai, download the package source from https://bitbucket.org/mrmay/bonsai/downloads, launch the R console, and install the package from source (making sure to install the packages that bonsai relies on as well):
+To use bonsai, download the package source from \href{https://github.com/mikeryanmay/bonsai}{https://github.com/mikeryanmay/bonsai}, launch the R console, and install the package from source by following the instructions on the bonsai main page (making sure to install the packages that bonsai relies on as well):
 {\tt \begin{snugshade*}
 \begin{lstlisting}
 install.packages(packages=c('coda','tools','RColorBrewer','entropy','xtable'),dependencies=TRUE)
