small SDD tutorial edits
separate arrows in hisse figure
small code fix
misc small

--- a/tutorial_TeX/RB_DiversificationRate_CharacterDependent_Tutorial/RB_DiversificationRate_CharacterDependent_Tutorial_content_intro.tex
+++ b/tutorial_TeX/RB_DiversificationRate_CharacterDependent_Tutorial/RB_DiversificationRate_CharacterDependent_Tutorial_content_intro.tex
@@ -11,7 +11,8 @@ Several variants have also been developed for other types of traits \citep{FitzJ
 We will outline the theory behind this method, and then you will fit it to data using Markov chain Monte Carlo (MCMC).
 \RevBayes is a powerful tool for SSE analyses. After working through this tutorial you
 should be able to set up custom SSE models and use them to
-infer character-dependent diversification rates, ancestral states, and stochastic character maps.
+infer character-dependent diversification rates and ancestral states.
+% and stochastic character maps. % maybe coming later?
 We also provide examples of how to plot the results using the \RevGadgets R package.
 
 \subsection*{Contents}
